# SpectraForge

./: .clang-format  .clang-tidy  .docker-cheatsheet.md  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  ADVANCED_COMPLIANCE_ANALYSIS.md  BUG_REPORT.md  BUILD_INSTRUCTIONS.md  BUILD_LINUX.md  CHALLENGE_COMPLETE.md  CHANGELOG.md  CI_CD_SETUP_REPORT.md  CLANG_FORMAT_FIX_REPORT.md  CMakeLists.txt  CMakeLists_simple.txt  CMakePresets.json  COMPLIANCE_REPORT.md  CONSOLE_OUTPUT_MIGRATION_ERRORS.md  CONSOLE_OUTPUT_MIGRATION_REPORT.md  CONTRIBUTING.md  CRITICAL-DEBUG-MODE-FIX.cpp  CUDA_VULKAN_INTEROP_REFACTORING_REPORT.md  DEMO_FIXES.md  DEMO_STATUS_REPORT.md  DEPENDENCIES.md  DOCKER_CI_FIXES_SUMMARY.md  DOCKER_CI_REPORT.md  DOCKER_FIX_REPORT.md  DOCKER_INTEGRATION_SUMMARY.md  DOCKER_NO_VCPKG_GUIDE.md  DOCKER_QUICK_START.md  DOCKER_SYSTEM_PACKAGES_MIGRATION.md  DOCKER_VCPKG_MINIZIP_FIX.md  Dockerfile  Doxyfile  ENCODING_FIX_REPORT.md  EXTERNAL_MEMORY_FIX_REPORT.md  FINAL_IMPLEMENTATION_SUMMARY.md  (+107 more)
.github/: CI_CD_SETUP.md  (+2 more)
headless/: CMakeLists.txt
headless/examples/: BlueCube_Demo_FIXED.cpp  SpectraForge_Example_Demo_FIXED.cpp
headless/shaders/: TriangleSplatting_FIXED.comp
headless/src/: Engine.cpp  Logger.cpp
headless/tests/: CMakeLists.txt  headless_engine_test.cpp
src/: CMakeLists.txt
src/CUDA/: cuda_stubs.h
src/Core/: Component.cpp  GameObject4D.cpp  PrimitiveFactory.cpp  Transform4D.cpp
src/Input/: Input4D.cpp
src/Math/: Matrix4.cpp  Quaternion4D.cpp  Vector4.cpp
src/Physics/: Physics4D.cpp
src/Rendering/: ProjectionStrategy.cpp  Renderer.cpp
src/app/: CMakeLists.txt  Engine.cpp  Engine_BACKUP.cpp  GameLoopManager.cpp  InputManager.cpp  SceneCoordinator.cpp  WindowManager.cpp
src/core/: CMakeLists.txt  Component.cpp  Console.cpp  Container.cpp  EngineCore.cpp  GameObject3D.cpp  Logger.cpp  Transform3D.cpp  VMAImplementation.cpp  VMAMemoryManager.cpp  VulkanContextImpl.cpp  Window.cpp  WindowFactory.cpp
src/cuda/: CudaInterop.cpp  FlashGSSplatter.cpp  cuda_kernels.cu  cuda_stubs.cpp  cuda_stubs.h  depth_sorting.cu  gaussian_optimization.cu  tile_rasterization.cu
src/input/: CMakeLists.txt  Input3D.cpp
src/math/: CMakeLists.txt  Vec4.cpp
src/math/matrix/: Matrix4.cpp  Quaternion.cpp
src/math/vector/: Vector3.cpp  Vector4.cpp
src/optix/: DenoiseModule.cpp  OptiXRayTracer.cpp  optix_init.cpp
src/output/: CMakeLists.txt  FrameOutput.cpp
src/performance/: CMakeLists.txt  TriangleSplattingBenchmark.cpp
src/physics/: CMakeLists.txt  Physics3D.cpp
src/platform/: CMakeLists.txt  X11Window.cpp
src/rendering/: CMakeLists.txt  Camera3D.cpp  FreGSPass.cpp  FreGSRenderStrategy.cpp  HybridFreGSRenderer.cpp  InstancedMeshPass.cpp  InstancedMeshPassOptimized.cpp  ModernRenderer3D.cpp  RenderPass.cpp  SpectraForge_Vulkan.cpp  StrategyFactory.cpp  TriangleSplattingPass.cpp  VulkanValidation.cpp  WaveletPass.cpp
src/rendering/core/: FrameManager.cpp  PipelineManager.cpp  RendererCore.cpp  RendererDebugger.cpp  RendererStatistics.cpp  SwapchainManager.cpp
src/rendering/freqvox/: BackendFactory.cpp  FoveatedSelector.cpp  FreqVoxRenderStage.cpp  FreqVoxStrategy.cpp  FrequencyShading.cpp  NeuralUpscaling.cpp  TemporalReprojection.cpp
src/rendering/opengl/: Camera3D.cpp  Gaussian3D.cpp  HybridRenderer3D.cpp  Mesh3D.cpp  OptimalRenderer3D.cpp  Renderer3D.cpp  RendererAdapter.cpp  Shader3D.cpp
src/rendering/triangle_splatting/: DepthSortingPass.cpp  FrustumCullingPass.cpp  TriangleBufferManager.cpp  TriangleRasterizationPass.cpp  TriangleSplattingCore.cpp  TriangleSplattingDebugger.cpp  TriangleSplattingPass.cpp  TriangleSplattingStatistics.cpp
src/rendering/utils/: DynamicBuffer.cpp
src/rendering/vulkan/: CMakeLists.txt  HardwareDetector.cpp  ResourceManager.cpp  SceneManager.cpp  VulkanEngine.cpp  VulkanRenderer.cpp
src/upscaling/: CMakeLists.txt  DLSSUpscaler.cpp  FSR2Upscaler.cpp  NativeUpscaler.cpp  Upscaler.cpp  UpscalerFactory.cpp
tests/: CMakeLists.txt  TestFramework.h  app_engine_test.cpp  connectivity_phase1_test.cpp  core_di_container_test.cpp  core_gameobject3d_test.cpp  core_logger_test.cpp  core_transform3d_test.cpp  core_vma_memory_test.cpp  depth_sorting_pass_test.cpp  di_setup_test.cpp  fregs_pass_test.cpp  frustum_culling_pass_test.cpp  game_loop_manager_test.cpp  hybrid_fregs_renderer_decomposition_test.cpp  hybrid_fregs_renderer_test.cpp  input_manager_test.cpp  input_system_test.cpp  instanced_mesh_test.cpp  integration_pipeline_test.cpp  math_matrix4_test.cpp  math_quaternion_test.cpp  math_vector3_test.cpp  math_vector_extra_test.cpp  modern_renderer3d_test.cpp  physics_system_test.cpp  render_strategy_factory_test.cpp  render_strategy_interfaces_test.cpp  rendering_camera3d_test.cpp  scene_coordinator_test.cpp  test_solid_principles.cpp  triangle_buffer_manager_test.cpp  triangle_rasterization_pass_test.cpp  triangle_splatting_core_test.cpp  triangle_splatting_debugger_test.cpp  triangle_splatting_minimal_test.cpp  triangle_splatting_pass_orchestrator_test.cpp  triangle_splatting_statistics_test.cpp  triangle_splatting_test.cpp  upscaling_system_test.cpp  (+9 more)
tests/integration/: CMakeLists.txt  HybridRenderer_IntegrationTest.cpp
tests/integration/rendering/: CudaVulkanInteropTest.cpp  FullPipelineIntegrationTest.cpp  RenderingPipelineIntegrationTest.cpp
tests/mocks/: MockRenderer.h  MockUpscaling.h  MockVulkanRenderer.h
tests/performance/: CMakeLists.txt  FreqVoxBenchmark.cpp
tests/performance/math/: MathPerformanceTest.cpp
tests/performance/rendering/: RenderingPerformanceTest.cpp
tests/rendering/: frame_manager_test.cpp  pipeline_manager_test.cpp  renderer_core_test.cpp  renderer_debugger_test.cpp  renderer_statistics_test.cpp  swapchain_manager_test.cpp
tests/templates/: README.md  integration_test_template.cpp  unit_test_template.cpp  vulkan_component_test_template.cpp
tests/unit/: CMakeLists.txt  DLSSUpscaler_Test.cpp  FSR2Upscaler_Test.cpp  FreGSPass_Test.cpp  NativeUpscaler_Test.cpp  WaveletPass_Test.cpp  math_tests.cpp  test_optix_integration.cpp
tests/unit/app/: AppEngineTest.cpp
(+675 files in other folders)
